# poker

./: .gitignore  DATA_PREPROCESSING_REVIEW.md  ENSEMBLE_ONLY_SUMMARY.md  MEMORY_ISSUE_FIXES.md  MODEL_IMPROVEMENT_STRATEGY.md  MODEL_VALIDATION_REPORT.md  Makefile  README.md  README_KNOWN_CARDS.md  analyze_known_cards_data.py  analyze_processed_data.py  app.py  pyproject.toml  pytest.ini  requirements.txt  validate_model_comprehensive.py  validate_model_reasonable.py
models/ensemble/: catboost_aggressive.cbm  catboost_balanced.cbm  catboost_conservative.cbm  catboost_deep.cbm  catboost_deep_moderate.cbm  catboost_final.cbm  catboost_low_reg.cbm  catboost_regularized.cbm  catboost_sampled.cbm  catboost_shallow.cbm  ensemble_metadata.json  ensemble_results.json
scripts/: README.md  check_dataset_quality.py  cleanup_unused.py  feature_distribution_check.py  project_status.py  pyproject.toml  requirements.txt
scripts/analysis/: analyze_6player_showdown_patterns.py  analyze_data_availability.py  analyze_hand_structure.py  analyze_known_cards_processed.py  analyze_processed_hole_cards.py  analyze_showdown_subset.py  extract_6player_known_cards.py  extract_6player_partial_known.py  extract_known_cards_original.py  extract_more_known_cards.py  extract_pluribus_data.py  print_first_hand_actions.py  validate_dataset_completeness.py  validate_focused_model.py  validate_model_predictions.py
src/: __init__.py
src/core/: __init__.py  load_data_eng.py
tests/: conftest.py  test_improvements.py  test_multiplayer_prediction.py  test_new_model.py  test_pipeline.py
(+9 files in other folders)
